--- a/index.html
+++ b/index.html
@@ -11,28 +11,37 @@
     <div class="cv-container">
         <!-- En-tête -->
         <header>
-    <div class="header-content">
-        <div class="header-left">
-            <img src="Photo.jpg" alt="Photo de Nouhayla Mecheboub" class="profile-image">
-        </div>
-        <div class="header-right">
-            <h1>NOUHAYLA MECHEBOUB</h1>
-            <p class="subtitle"><strong>MASTER EN MARKETING, REVENUE MANAGEMENT ET DATA SCIENCE</strong></p>
-            <div class="contact-info">
-                <p><i class="fas fa-map-marker-alt"></i> 86, Rue Moussa Brou Noussayr Hay El Mohammadi, Berkane, 63300, Maroc</p>
-                <p><i class="fas fa-phone"></i> +212 606 958 249 |  <i class="fas fa-envelope"></i>  nouhayla.mecheboub@gmail.com</p>
+            <div class="header-content">
+                <div class="header-left">
+                    <img src="Photo.jpg" alt="Photo de Nouhayla Mecheboub" class="profile-image">
+                </div>
+                <div class="header-right">
+                    <!-- Sélecteur de langue -->
+                    <div class="language-switcher">
+                        <a href="index.html" class="language-option">
+                            <img src="fr.png" alt="Français" width="24" height="18"> Français
+                        </a>
+                        <a href="index_en.html" class="language-option">
+                            <img src="en.png" alt="English" width="24" height="18"> English
+                        </a>
+                    </div>
+                    <h1>NOUHAYLA MECHEBOUB</h1>
+                    <p class="subtitle"><strong>MASTER EN MARKETING, REVENUE MANAGEMENT ET DATA SCIENCE</strong></p>
+                    <div class="contact-info">
+                        <p><i class="fas fa-map-marker-alt"></i> 86, Rue Moussa Brou Noussayr Hay El Mohammadi, Berkane, 63300, Maroc</p>
+                        <p><i class="fas fa-phone"></i> +212 606 958 249 |  <i class="fas fa-envelope"></i>  nouhayla.mecheboub@gmail.com</p>
+                    </div>
+                    <div class="social-links">
+                        <p>
+                            <a href="https://nouhaylamecheboub.netlify.app/" target="_blank"><i class="fas fa-globe"></i> https://nouhaylamecheboub.netlify.app/</a>
+                        </p>
+                        <p>
+                            <a href="https://www.linkedin.com/in/nouhayla-mecheboub-serghini/" target="_blank"><i class="fab fa-linkedin"></i> https://www.linkedin.com/in/nouhayla-mecheboub-serghini/</a>
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="social-links">
-                <p>
-                    <a href="https://nouhaylamecheboub.netlify.app/" target="_blank"><i class="fas fa-globe"></i> https://nouhaylamecheboub.netlify.app/</a>
-                </p>
-                <p>
-                    <a href="https://www.linkedin.com/in/nouhayla-mecheboub-serghini/" target="_blank"><i class="fab fa-linkedin"></i> https://www.linkedin.com/in/nouhayla-mecheboub-serghini/</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</header>
+        </header>
 
         <!-- Profil -->
         <section class="section profile">
@@ -52,19 +61,18 @@
                     <p class="institution">Université Mohammed Premier, Oujda</p>
                     <p class="date">Octobre 2023 - En cours</p>
                     <ul>
-                        <li><strong>Fouille et visualisation des données massives :</strong> Création d'un tableau de bord interactif d'une société de télécommunications(Analyse de tendances de consommation des services télécom au fil du temps et prediction des tendances futures, Visualisations cartographiques interactives, Visualisation en temps réel des KPIs).</li>
+                        <li><strong>Fouille et visualisation des données massives :</strong> Création d'un tableau de bord interactif d'une société de télécommunications (Analyse de tendances de consommation des services télécom au fil du temps et prédiction des tendances futures, visualisations cartographiques interactives, visualisation en temps réel des KPIs).</li>
                         <li class="techniques">Techniques utilisées : ETL, SQL Server Analysis Services, Power BI.</li>
                         <li><strong>Marketing analytics :</strong> Utilisation des réseaux de neurones classiques pour la prédiction de l'attrition client (Churn) dans le secteur bancaire.</li>
-                        <li class="techniques">Techniques utilisées : Réseaux de neurones(ANN), TensorFlow, CRISP-DM.</li>
+                        <li class="techniques">Techniques utilisées : Réseaux de neurones (ANN), TensorFlow, CRISP-DM.</li>
                         <li><strong>Droit du Marketing :</strong> Création d'une campagne publicitaire (fictive) pour le lancement d’une plateforme de commerce électronique dédiée aux produits artisanaux marocains : tapis berbères, poteries, bijoux en argent, etc. Cette plateforme permet aux artisans locaux de vendre directement leurs produits aux consommateurs du monde entier, afin de prospecter de nouveaux clients, de vendre leurs créations et de fidéliser les clients, tout en respectant les droits de marketing (droit d'auteur, droit de consommation, etc.).</li>
                         <li class="techniques">Techniques et Outils utilisées : HTML, CSS, JavaScript, Instagram, Blogspot, Microsoft Clipchamp.</li>
-                        <li><strong>Pricing et Revenue Management :</strong> L'utilisation de modèles de Machine learning pour prédire les annulations de réservations dans le secteur hôtelier. L'objectif principal était de construire un modèle capable d'identifier avec précision les réservations ayant une forte probabilité d'annulation en comparant 4 modèles de classification , afin de permettre aux hôtels de minimiser les pertes de revenus et d'optimiser leur gestion des réservations.</li>
+                        <li><strong>Pricing et Revenue Management :</strong> L'utilisation de modèles de Machine Learning pour prédire les annulations de réservations dans le secteur hôtelier. L'objectif principal était de construire un modèle capable d'identifier avec précision les réservations ayant une forte probabilité d'annulation en comparant 4 modèles de classification, afin de permettre aux hôtels de minimiser les pertes de revenus et d'optimiser leur gestion des réservations.</li>
                         <li class="techniques">Techniques utilisées : SVM, régression logistique, XGBoost, Random Forest.</li>
-                        <li><strong>Data mining et Machine Learning :</strong> Comparaison des architectures de deep learning pour la détection de fraudes. Une analyse comparative des architectures de deep learning MLP, RNN et LSTM afin d'identifier le modèle le plus efficace pour prédir les activités frauduleuses dans le secteur financier.</li>
+                        <li><strong>Data mining et Machine Learning :</strong> Comparaison des architectures de deep learning pour la détection de fraudes. Une analyse comparative des architectures de deep learning MLP, RNN et LSTM afin d'identifier le modèle le plus efficace pour prédire les activités frauduleuses dans le secteur financier.</li>
                         <li class="techniques">Techniques utilisées : MLP, RNN, LSTM.</li>
-                        <li><strong>Les Medias Sociaux et Le Web Analytique (NLP) :</strong> Développement d'une interface web qui détecte les HateSpeech dans les tweets et fournit une brève explication de la raison pour laquelle chaque tweet a été classé comme « HATE SPEECH » ou « NOT HATE SPEECH ».</li>
+                        <li><strong>Les Médias Sociaux et Le Web Analytique (NLP) :</strong> Développement d'une interface web qui détecte les HateSpeech dans les tweets et fournit une brève explication de la raison pour laquelle chaque tweet a été classé comme « HATE SPEECH » ou « NOT HATE SPEECH ».</li>
                         <li class="techniques">Techniques utilisées : PyTorch, NLTK, Hugging Face Transformers, SHAP, Flask, BERT, BerTweet, HateBERT.</li>
-
                     </ul>
                 </div>
 
@@ -141,8 +149,6 @@
                 </div>
             </section>
         </div>
-
-        
     </div>
 </body>
 </html>
