--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select Resume Language</title>
+    <title>Resume Language Selection</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="language-container">
-        <h1>Choose Your Preferred Language</h1>
-        <div class="language-options">
-            <a href="index_en.html" class="language-btn">
-                <img src="us.png" alt="English Flag"> English
-            </a>
-            <a href="index_fr.html" class="language-btn">
-                <img src="fr.png" alt="French Flag"> Français
-            </a>
+    <div class="cv-container language-selection">
+        <h1>Select Resume Language</h1>
+        <div class="buttons">
+            <a href="index_en.html" class="btn">English</a>
+            <a href="index_fr.html" class="btn">Français</a>
         </div>
     </div>
 </body>
