--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Language Selection</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css"> 
 </head>
 <body>
+    <div class="loader"></div> 
+
     <div class="cv-container language-selection">
         <h1>Select Resume Language</h1>
         <div class="buttons">
