--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="stylesheet.css"> 
 </head>
 <body>
-    <div class="loader"></div> 
-
-    <div class="cv-container language-selection">
-        <h1>Select Resume Language</h1>
-        <div class="buttons">
-            <a href="index_en.html" class="btn">English</a>
-            <a href="index_fr.html" class="btn">Français</a>
+    <div class="wrapper">
+        <div class="language-selection">
+            <h1>Select Your Resume Language</h1>
+            <div class="button-container">
+                <a href="index_en.html" class="btn">English</a>
+                <a href="index_fr.html" class="btn">Français</a>
+            </div>
         </div>
     </div>
 </body>
