--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Language Selection</title>
-    <link rel="stylesheet" href="stylesheet.css"> 
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <div class="loader"></div> 
+    <div class="loader"></div>
 
     <div class="cv-container language-selection">
         <h1>Select Resume Language</h1>
         <div class="buttons">
-            <a href="index_en.html" class="btn">English</a>
-            <a href="index_fr.html" class="btn">Français</a>
+            <a href="index_en.html" class="btn english">English</a>
+            <a href="index_fr.html" class="btn french">Français</a>
         </div>
     </div>
 </body>
