--- a/index_en.html
+++ b/index_en.html
@@ -38,8 +38,7 @@
         <section class="section profile">
             <h2><i class="fas fa-user"></i> PROFILE</h2>
             <p>
-                I am a second-year Master's student in Marketing, Revenue Management, and Data Science, passionate about data analysis and its impact on marketing strategies. I am seeking a final-year internship of at least 6 months to deepen my skills and contribute to concrete projects. My goal is to use data science to improve decision-making in marketing and revenue management while adding value to a dynamic team.
-            </p>
+Passionate about data and Artificial intelligence and its impact on marketing strategies. I am seeking a final-year internship of at least 3 months to deepen my skills and contribute to concrete projects. I enjoy working with tools like Python, R, SQL, and Tableau to analyze data and find insights. I’m also interested in using machine learning and deep Learning to predict trends and improve marketing strategies.            </p>
         </section>
 
         <!-- Education -->
