--- a/index_fr.html
+++ b/index_fr.html
@@ -39,8 +39,7 @@
         <section class="section profile">
             <h2><i class="fas fa-user"></i> PROFIL</h2>
             <p>
-                Étudiante en deuxième année de Master en Marketing, Revenue Management et Data Science, je suis passionnée par l’analyse des données et leur impact sur les stratégies marketing. Je recherche un stage de fin d’études d’au moins 6 mois pour approfondir mes compétences et contribuer à des projets concrets. Mon objectif est d’utiliser la data science pour améliorer la prise de décision dans le marketing et le revenue management, tout en apportant une valeur ajoutée à une équipe dynamique.
-            </p>
+Passionné par les données et l'intelligence artificielle ainsi que leur impact sur les stratégies marketing, je suis à la recherche d'un stage de fin d'études d'au moins 3 mois pour approfondir mes compétences et contribuer à des projets concrets. J'aime travailler avec des outils comme Python, R, SQL et Tableau pour analyser des données et en extraire des insights. Je suis également intéressé par l'utilisation du machine learning et du deep learning pour prédire des tendances et améliorer les stratégies marketing.            </p>
         </section>
 
         <!-- Éducation -->
