--- a/index_en.html
+++ b/index_en.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="header-right">
                     <h1>NOUHAYLA MECHEBOUB</h1>
-                    <p class="subtitle"><strong>MASTER IN MARKETING, REVENUE MANAGEMENT, AND DATA SCIENCE</strong></p>
+                    <p class="subtitle"><strong>DATA SCIENTIST & ANALYST – MARKETING, REVENUE MANAGEMENT, AND MEDIA INSIGHTS</strong></p>
                     <div class="contact-info">
                         <p><i class="fas fa-map-marker-alt"></i> 86, Rue Moussa Brou Noussayr Hay El Mohammadi, Berkane, 63300, Morocco</p>
                         <p><i class="fas fa-phone"></i> +212 606 958 249 |  <i class="fas fa-envelope"></i>  nouhayla.mecheboub@gmail.com</p>
@@ -37,8 +37,40 @@
         <!-- Profile -->
         <section class="section profile">
             <h2><i class="fas fa-user"></i> PROFILE</h2>
-            <p>
-Passionate about data and Artificial intelligence and its impact on marketing strategies. I am seeking a final-year internship of at least 3 months to deepen my skills and contribute to concrete projects. I enjoy working with tools like Python, R, SQL, and Tableau to analyze data and find insights. I’m also interested in using machine learning and deep Learning to predict trends and improve marketing strategies.            </p>
+           <p>
+        Data Scientist and Analyst specialized in <strong>marketing analytics, revenue management, media insights, and consumer behavior prediction</strong>. 
+        Skilled in <strong>machine learning, deep learning, and data mining</strong> to deliver actionable insights and support data-driven strategies. 
+        Experienced with <strong>Python, R, SQL, Power BI, Tableau, and data scraping</strong> for predictive modeling, interactive dashboards, and advanced business intelligence. 
+        Dedicated to applying <strong>AI and data science</strong> to optimize decision-making and evaluate media and marketing performance.
+    </p>
+        </section>
+
+        <!-- Experience -->
+        <section class="section experience">
+            <h2><i class="fas fa-briefcase"></i> EXPERIENCE</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h3>Data Scientist – CIAUMED</h3>
+                    <p class="institution">Casablanca, Morocco</p>
+                    <p class="date">July 2025 – Present</p>
+                    <ul>
+                        <li>Conduct advanced audience measurement and panel management for Moroccan television.</li>
+                        <li>Apply machine learning and statistical methods to evaluate audience behavior and program performance.</li>
+                        <li>Develop dashboards and automated reports for media consumption insights.</li>
+                    </ul>
+                </div>
+
+                <div class="timeline-item">
+                    <h3>Data Analyst Intern – CIAUMED</h3>
+                    <p class="institution">Casablanca, Morocco</p>
+                    <p class="date">April 2025 – July 2025</p>
+                    <ul>
+                        <li>Supported quarterly and monthly audience control studies (Contrôles Mensuels & Trimestriels).</li>
+                        <li>Assisted in data cleaning, merging, and exploratory analysis of household and individual-level datasets.</li>
+                        <li>Worked on quality checks and metrics including rotation of households, intab rates, and concordance analyses.</li>
+                    </ul>
+                </div>
+            </div>
         </section>
 
         <!-- Education -->
@@ -49,20 +81,17 @@ Passionate about data and Artificial intelligence and its impact on marketing st
                 <div class="timeline-item">
                     <h3>Master in Marketing, Revenue Management, and Data Science</h3>
                     <p class="institution">Mohammed Premier University, Oujda</p>
-                    <p class="date">October 2023 - Present</p>
+                    <p class="date">October 2023 - July 2025</p>
                     <ul>
-                        <li><strong>Big Data Mining and Visualization:</strong> Creation of an interactive dashboard for a telecommunications company (Analysis of telecom service consumption trends over time, prediction of future trends, interactive map visualizations, real-time KPI visualization).</li>
+                        <li><strong>Evaluation of Television Programs During the Month of Ramadan:</strong> Mixed-method project combining <strong>quantitative EDA on multiple datasets</strong> and <strong>qualitative sentiment analysis</strong> of online comments to assess TV programs from both statistical and emotional perspectives.</li>
+                        <li class="techniques">Techniques used: Python (Pandas, Matplotlib, Seaborn), NLP, Sentiment Analysis, Data Scraping.</li>
+                        <li><strong>Big Data Mining and Visualization:</strong> Creation of an interactive dashboard for a telecommunications company (Analysis of telecom service consumption trends, prediction of future trends, map visualizations, real-time KPIs).</li>
                         <li class="techniques">Techniques used: ETL, SQL Server Analysis Services, Power BI.</li>
-                        <li><strong>Marketing Analytics:</strong> Use of classical neural networks for predicting customer churn in the banking sector.</li>
-                        <li class="techniques">Techniques used: Artificial Neural Networks (ANN), TensorFlow, CRISP-DM.</li>
-                        <li><strong>Marketing Law:</strong> Creation of an advertising campaign (fictional) for the launch of an e-commerce platform dedicated to Moroccan artisanal products: Berber carpets, pottery, silver jewelry, etc. This platform allows local artisans to sell their products directly to consumers worldwide, helping them prospect new customers, sell their creations, and retain clients while respecting marketing laws (copyright, consumer rights, etc.).</li>
-                        <li class="techniques">Techniques and Tools used: HTML, CSS, JavaScript, Instagram, Blogspot, Microsoft Clipchamp.</li>
-                        <li><strong>Pricing and Revenue Management:</strong> Use of Machine Learning models to predict booking cancellations in the hotel industry. The main objective was to build a model capable of accurately identifying reservations with a high probability of cancellation by comparing 4 classification models, enabling hotels to minimize revenue losses and optimize reservation management.</li>
-                        <li class="techniques">Techniques used: SVM, Logistic Regression, XGBoost, Random Forest.</li>
-                        <li><strong>Data Mining and Machine Learning:</strong> Comparison of deep learning architectures for fraud detection. A comparative analysis of deep learning architectures (MLP, RNN, LSTM) to identify the most effective model for predicting fraudulent activities in the financial sector.</li>
-                        <li class="techniques">Techniques used: MLP, RNN, LSTM.</li>
-                        <li><strong>Social Media and Web Analytics (NLP):</strong> Development of a web interface that detects Hate Speech in tweets and provides a brief explanation of why each tweet was classified as "HATE SPEECH" or "NOT HATE SPEECH."</li>
-                        <li class="techniques">Techniques used: PyTorch, NLTK, Hugging Face Transformers, SHAP, Flask, BERT, BerTweet, HateBERT.</li>
+                        <li><strong>Marketing Analytics:</strong> Customer churn prediction in banking using Artificial Neural Networks.</li>
+                        <li class="techniques">Techniques used: ANN, TensorFlow, CRISP-DM.</li>
+                        <li><strong>Pricing and Revenue Management:</strong> Machine learning models to predict hotel booking cancellations using SVM, Logistic Regression, XGBoost, and Random Forest.</li>
+                        <li><strong>Data Mining and Machine Learning:</strong> Fraud detection with deep learning architectures (MLP, RNN, LSTM).</li>
+                        <li><strong>Social Media & Web Analytics:</strong> Web interface to detect Hate Speech in tweets using BERT, BerTweet, HateBERT with SHAP explainability.</li>
                     </ul>
                 </div>
 
@@ -72,7 +101,7 @@ Passionate about data and Artificial intelligence and its impact on marketing st
                     <p class="institution">Mohammed Premier University, Oujda</p>
                     <p class="date">September 2019 - June 2022</p>
                     <ul>
-                        <li><strong>Final Year Project:</strong> Implementation of a multi-layer neural network that acts as a compressor and decompressor for handwritten digits (Handwritten Digit Recognition System using the MNIST dataset).</li>
+                        <li><strong>Final Year Project:</strong> Multi-layer neural network for handwritten digit recognition (MNIST).</li>
                         <li class="techniques">Techniques used: Neural Networks, TensorFlow, Keras, Tkinter.</li>
                     </ul>
                 </div>
@@ -100,17 +129,17 @@ Passionate about data and Artificial intelligence and its impact on marketing st
                 <h2><i class="fas fa-cogs"></i> SKILLS</h2>
                 <div class="skills-grid">
                     <div class="skill-card">
-                        <h3>MACHINE LEARNING</h3>
+                        <h3>DATA SCIENCE & ANALYTICS</h3>
                         <ul>
-                            <li>Data Mining</li>
-                            <li>Python</li>
-                            <li>R</li>
-                            <li>NLP</li>
-                            <li>Power BI</li>
-                            <li>SQL</li>
+                            <li>Machine Learning & Deep Learning</li>
+                            <li>Data Mining & Exploratory Data Analysis</li>
+                            <li>Natural Language Processing (NLP)</li>
+                            <li>Python (Pandas, NumPy, Scikit-learn, TensorFlow, PyTorch)</li>
+                            <li>R (tidyverse, caret, ggplot2)</li>
+                            <li>SQL & Databases</li>
+                            <li>Power BI & Tableau</li>
+                            <li>Data Scraping & Web Automation</li>
                             <li>IBM SPSS</li>
-                            <li>Data Analysis</li>
-                            <li>Digital Marketing</li>
                         </ul>
                     </div>
                 </div>
