--- a/index_en.html
+++ b/index_en.html
@@ -39,9 +39,9 @@
             <h2><i class="fas fa-user"></i> PROFILE</h2>
            <p>
         Data Scientist and Analyst specialized in <strong>marketing analytics, revenue management, media insights, and consumer behavior prediction</strong>. 
-        Skilled in <strong>machine learning, deep learning, and data mining</strong> to deliver actionable insights and support data-driven strategies. 
+        Skilled in <strong>machine learning, deep learning, NLP, and data mining</strong> to deliver actionable insights and ensure data quality. 
         Experienced with <strong>Python, R, SQL, Power BI, Tableau, and data scraping</strong> for predictive modeling, interactive dashboards, and advanced business intelligence. 
-        Dedicated to applying <strong>AI and data science</strong> to optimize decision-making and evaluate media and marketing performance.
+        Focused on applying <strong>AI and data science</strong> to optimize decision-making and evaluate media and marketing performance.
     </p>
         </section>
 
@@ -49,25 +49,30 @@
         <section class="section experience">
             <h2><i class="fas fa-briefcase"></i> EXPERIENCE</h2>
             <div class="timeline">
-                <div class="timeline-item">
-                    <h3>Data Scientist – CIAUMED</h3>
-                    <p class="institution">Casablanca, Morocco</p>
-                    <p class="date">July 2025 – Present</p>
-                    <ul>
-                        <li>Conduct advanced audience measurement and panel management for Moroccan television.</li>
-                        <li>Apply machine learning and statistical methods to evaluate audience behavior and program performance.</li>
-                        <li>Develop dashboards and automated reports for media consumption insights.</li>
-                    </ul>
-                </div>
+               <div class="timeline-item">
+    <h3>Data Analyst – CIAUMED</h3>
+    <p class="institution">Casablanca, Morocco</p>
+    <p class="date">July 2025 – Present</p>
+    <ul>
+        <li>Conduct <strong>monthly, quarterly, and annual data quality controls</strong> on the national television audience measurement database.</li>
+        <li>Design and implement <strong>statistical models</strong> to improve accuracy and reliability of audience estimates.</li>
+        <li>Perform <strong>exploratory and diagnostic analyses</strong> to detect anomalies and ensure panel consistency (household rotation, intab, concordance, etc.).</li>
+        <li>Supervise and validate results from <strong>field survey controls </strong>.</li>
+        
+    </ul>
+</div>
+
 
                 <div class="timeline-item">
-                    <h3>Data Analyst Intern – CIAUMED</h3>
+                    <h3>Final Year Master Project & Internship – CIAUMED</h3>
                     <p class="institution">Casablanca, Morocco</p>
                     <p class="date">April 2025 – July 2025</p>
                     <ul>
-                        <li>Supported quarterly and monthly audience control studies (Contrôles Mensuels & Trimestriels).</li>
-                        <li>Assisted in data cleaning, merging, and exploratory analysis of household and individual-level datasets.</li>
-                        <li>Worked on quality checks and metrics including rotation of households, intab rates, and concordance analyses.</li>
+                        <li><strong>Evaluation of Television Programs During Ramadan:</strong> Quantitative and qualitative analysis of Moroccan TV programs.</li>
+                        <li>Applied <strong>Exploratory Data Analysis (EDA)</strong> on audience datasets to assess viewership patterns.</li>
+                        <li>Performed <strong>sentiment analysis</strong> on comments scraped from Facebook and YouTube to capture viewers’ emotional reactions.</li>
+                        <li>Combined statistical insights with NLP-based text analytics to provide a holistic program evaluation.</li>
+                        <li>Techniques used: Python, Pandas, Matplotlib, Seaborn, BeautifulSoup, NLP, Sentiment Analysis.</li>
                     </ul>
                 </div>
             </div>
@@ -83,15 +88,12 @@
                     <p class="institution">Mohammed Premier University, Oujda</p>
                     <p class="date">October 2023 - July 2025</p>
                     <ul>
-                        <li><strong>Evaluation of Television Programs During the Month of Ramadan:</strong> Mixed-method project combining <strong>quantitative EDA on multiple datasets</strong> and <strong>qualitative sentiment analysis</strong> of online comments to assess TV programs from both statistical and emotional perspectives.</li>
-                        <li class="techniques">Techniques used: Python (Pandas, Matplotlib, Seaborn), NLP, Sentiment Analysis, Data Scraping.</li>
-                        <li><strong>Big Data Mining and Visualization:</strong> Creation of an interactive dashboard for a telecommunications company (Analysis of telecom service consumption trends, prediction of future trends, map visualizations, real-time KPIs).</li>
-                        <li class="techniques">Techniques used: ETL, SQL Server Analysis Services, Power BI.</li>
-                        <li><strong>Marketing Analytics:</strong> Customer churn prediction in banking using Artificial Neural Networks.</li>
-                        <li class="techniques">Techniques used: ANN, TensorFlow, CRISP-DM.</li>
-                        <li><strong>Pricing and Revenue Management:</strong> Machine learning models to predict hotel booking cancellations using SVM, Logistic Regression, XGBoost, and Random Forest.</li>
-                        <li><strong>Data Mining and Machine Learning:</strong> Fraud detection with deep learning architectures (MLP, RNN, LSTM).</li>
-                        <li><strong>Social Media & Web Analytics:</strong> Web interface to detect Hate Speech in tweets using BERT, BerTweet, HateBERT with SHAP explainability.</li>
+                        <li><strong>Final Year Project:</strong> Evaluation of Ramadan television programs using a dual approach: quantitative (EDA on audience datasets) and qualitative (NLP-based sentiment analysis of online comments).</li>
+                        <li><strong>Big Data Mining and Visualization:</strong> Interactive Power BI dashboard for telecom consumption trends, forecasts, and real-time KPIs.</li>
+                        <li><strong>Marketing Analytics:</strong> Customer churn prediction in banking using ANN and TensorFlow.</li>
+                        <li><strong>Pricing & Revenue Management:</strong> Hotel booking cancellation prediction with SVM, Logistic Regression, XGBoost, and Random Forest.</li>
+                        <li><strong>Fraud Detection:</strong> Comparative study of deep learning architectures (MLP, RNN, LSTM).</li>
+                        <li><strong>Social Media & Web Analytics:</strong> Web app for hate speech detection using BERT, BerTweet, HateBERT with SHAP explainability.</li>
                     </ul>
                 </div>
 
@@ -132,13 +134,13 @@
                         <h3>DATA SCIENCE & ANALYTICS</h3>
                         <ul>
                             <li>Machine Learning & Deep Learning</li>
-                            <li>Data Mining & Exploratory Data Analysis</li>
-                            <li>Natural Language Processing (NLP)</li>
+                            <li>Exploratory Data Analysis (EDA)</li>
+                            <li>Natural Language Processing (NLP) & Sentiment Analysis</li>
+                            <li>Data Scraping & Web Automation (Facebook, YouTube)</li>
                             <li>Python (Pandas, NumPy, Scikit-learn, TensorFlow, PyTorch)</li>
                             <li>R (tidyverse, caret, ggplot2)</li>
                             <li>SQL & Databases</li>
                             <li>Power BI & Tableau</li>
-                            <li>Data Scraping & Web Automation</li>
                             <li>IBM SPSS</li>
                         </ul>
                     </div>
