--- a/index_en.html
+++ b/index_en.html
@@ -49,18 +49,19 @@
         <section class="section experience">
             <h2><i class="fas fa-briefcase"></i> EXPERIENCE</h2>
             <div class="timeline">
-               <div class="timeline-item">
+              <div class="timeline-item">
     <h3>Data Analyst – CIAUMED</h3>
     <p class="institution">Casablanca, Morocco</p>
     <p class="date">July 2025 – Present</p>
     <ul>
-        <li>Conduct <strong>monthly, quarterly, and annual data quality controls</strong> on the national television audience measurement database.</li>
-        <li>Design and implement <strong>statistical models</strong> to improve accuracy and reliability of audience estimates.</li>
-        <li>Perform <strong>exploratory and diagnostic analyses</strong> to detect anomalies and ensure panel consistency (household rotation, intab, concordance, etc.).</li>
-        <li>Supervise and validate results from <strong>field survey controls </strong>.</li>
-        
+        <li>Execute <strong>monthly, quarterly, and annual controls</strong> on television audience and panel databases to ensure reliability and usability of data.</li>
+        <li>Guarantee the <strong>quality, consistency, and accuracy</strong> of national audience measurement data.</li>
+        <li>Assist and supervise <strong>field studies and on-site survey controls</strong> to validate data collection processes.</li>
+        <li>Conduct <strong>research on new statistical models</strong> and explore international best practices in audience measurement and digital marketing analytics.</li>
+        <li>Support the development of <strong>innovative tools and methodologies</strong> to strengthen CIAUMED’s audience measurement systems.</li>
     </ul>
 </div>
+
 
 
                 <div class="timeline-item">
