--- a/index_en.html
+++ b/index_en.html
@@ -49,18 +49,39 @@
         <section class="section experience">
             <h2><i class="fas fa-briefcase"></i> EXPERIENCE</h2>
             <div class="timeline">
-              <div class="timeline-item">
+             <div class="timeline-item">
     <h3>Data Analyst – CIAUMED</h3>
     <p class="institution">Casablanca, Morocco</p>
     <p class="date">July 2025 – Present</p>
     <ul>
-        <li>Execute <strong>monthly, quarterly, and annual controls</strong> on television audience and panel databases to ensure reliability and usability of data.</li>
-        <li>Guarantee the <strong>quality, consistency, and accuracy</strong> of national audience measurement data.</li>
-        <li>Assist and supervise <strong>field studies and on-site survey controls</strong> to validate data collection processes.</li>
-        <li>Conduct <strong>research on new statistical models</strong> and explore international best practices in audience measurement and digital marketing analytics.</li>
-        <li>Support the development of <strong>innovative tools and methodologies</strong> to strengthen CIAUMED’s audience measurement systems.</li>
+        <li><strong>Audience Data Quality & Control</strong>  
+            <ul>
+                <li>Conduct monthly, quarterly, and annual audits of television audience and panel databases.</li>
+                <li>Ensure data accuracy, consistency, and usability for internal reporting and strategic decisions.</li>
+                <li>Supervise field survey operations and validate data collection procedures.</li>
+            </ul>
+        </li>
+        <li><strong>Automation & Reporting</strong>  
+            <ul>
+                <li>Developed automated KPI reporting systems, reducing processing time and enabling daily insights from over 1 million data rows.</li>
+                <li>Transitioned reporting workflows from manual monthly updates to real-time dashboards.</li>
+            </ul>
+        </li>
+        <li><strong>Machine Learning & Segmentation</strong>  
+            <ul>
+                <li>Built and validated predictive models to classify Moroccan households by living standards.</li>
+                <li>Improved segmentation accuracy for targeted analysis and strategic planning.</li>
+            </ul>
+        </li>
+        <li><strong>Data Visualization & Communication</strong>  
+            <ul>
+                <li>Designed interactive dashboards using Power BI and R Markdown.</li>
+                <li>Translated complex data into clear visual insights for non-technical stakeholders.</li>
+            </ul>
+        </li>
     </ul>
 </div>
+
 
 
 
