--- a/index_en.html
+++ b/index_en.html
@@ -80,18 +80,22 @@
 
 
 
-                <div class="timeline-item">
-                    <h3>Final Year Master Project & Internship – CIAUMED</h3>
-                    <p class="institution">Casablanca, Morocco</p>
-                    <p class="date">April 2025 – July 2025</p>
-                    <ul>
-                        <li><strong>Evaluation of Television Programs During Ramadan:</strong> Quantitative and qualitative analysis of Moroccan TV programs.</li>
-                        <li>Applied <strong>Exploratory Data Analysis (EDA)</strong> on audience datasets to assess viewership patterns.</li>
-                        <li>Performed <strong>sentiment analysis</strong> on comments scraped from Facebook and YouTube to capture viewers’ emotional reactions.</li>
-                        <li>Combined statistical insights with NLP-based text analytics to provide a holistic program evaluation.</li>
-                        <li>Techniques used: Python, Pandas, Matplotlib, Seaborn, BeautifulSoup, NLP, Sentiment Analysis.</li>
-                    </ul>
-                </div>
+               <div class="timeline-item">
+    <h3>Data Analyst Intern – CIAUMED (Master Final Year Project)</h3>
+    <p class="institution">Casablanca, Morocco</p>
+    <p class="date">April 2025 – July 2025</p>
+    <ul>
+        <li><strong>Evaluation of Television Programs During Ramadan</strong>  
+            <ul>
+                <li>Conducted quantitative and qualitative analysis of Moroccan TV programs aired during Ramadan.</li>
+                <li>Applied <strong>Exploratory Data Analysis (EDA)</strong> on audience datasets to identify viewership trends and patterns.</li>
+                <li>Scraped and analyzed viewer comments from Facebook and YouTube to perform <strong>sentiment analysis</strong> and capture emotional responses.</li>
+                <li><em>Tools & Techniques:</em> Python, Pandas, Matplotlib, Seaborn, BeautifulSoup, NLP, Sentiment Analysis.</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+
             </div>
         </section>
 
@@ -105,7 +109,7 @@
                     <p class="institution">Mohammed Premier University, Oujda</p>
                     <p class="date">October 2023 - July 2025</p>
                     <ul>
-                        <li><strong>Final Year Project:</strong> Evaluation of Ramadan television programs using a dual approach: quantitative (EDA on audience datasets) and qualitative (NLP-based sentiment analysis of online comments).</li>
+                        <li><strong>Final Year Project:</strong> Evaluation of Ramadan television programs using a dual approach: quantitative (EDA on audience datasets) and qualitative (NLP and sentiment analysis of online comments).</li>
                         <li><strong>Big Data Mining and Visualization:</strong> Interactive Power BI dashboard for telecom consumption trends, forecasts, and real-time KPIs.</li>
                         <li><strong>Marketing Analytics:</strong> Customer churn prediction in banking using ANN and TensorFlow.</li>
                         <li><strong>Pricing & Revenue Management:</strong> Hotel booking cancellation prediction with SVM, Logistic Regression, XGBoost, and Random Forest.</li>
@@ -151,13 +155,13 @@
                         <h3>DATA SCIENCE & ANALYTICS</h3>
                         <ul>
                             <li>Machine Learning & Deep Learning</li>
-                            <li>Exploratory Data Analysis (EDA)</li>
-                            <li>Natural Language Processing (NLP) & Sentiment Analysis</li>
-                            <li>Data Scraping & Web Automation (Facebook, YouTube)</li>
+                            <li>Exploratory Data Analysis </li>
+                            <li>Natural Language Processing  & Sentiment Analysis</li>
+                            <li>Data Scraping  </li>
                             <li>Python (Pandas, NumPy, Scikit-learn, TensorFlow, PyTorch)</li>
-                            <li>R (tidyverse, caret, ggplot2)</li>
+                            <li>R </li>
                             <li>SQL & Databases</li>
-                            <li>Power BI & Tableau</li>
+                            <li>Power BI </li>
                             <li>IBM SPSS</li>
                         </ul>
                     </div>
