--- a/index_en.html
+++ b/index_en.html
@@ -81,7 +81,7 @@
 
 
                <div class="timeline-item">
-    <h3>Data Analyst Intern – CIAUMED (Master Final Year Project)</h3>
+    <h3>Data Analyst Intern – CIAUMED </h3>
     <p class="institution">Casablanca, Morocco</p>
     <p class="date">April 2025 – July 2025</p>
     <ul>
@@ -90,7 +90,7 @@
                 <li>Conducted quantitative and qualitative analysis of Moroccan TV programs aired during Ramadan.</li>
                 <li>Applied <strong>Exploratory Data Analysis (EDA)</strong> on audience datasets to identify viewership trends and patterns.</li>
                 <li>Scraped and analyzed viewer comments from Facebook and YouTube to perform <strong>sentiment analysis</strong> and capture emotional responses.</li>
-                <li><em>Tools & Techniques:</em> Python, Pandas, Matplotlib, Seaborn, BeautifulSoup, NLP, Sentiment Analysis.</li>
+                <li><em>Tools & Techniques:</em> Python, Pandas, Matplotlib, Seaborn, NLP, Sentiment Analysis, DarijaBERT, AraBERT, etc.</li>
             </ul>
         </li>
     </ul>
