--- a/index_en.html
+++ b/index_en.html
@@ -50,7 +50,7 @@
             <h2><i class="fas fa-briefcase"></i> EXPERIENCE</h2>
             <div class="timeline">
              <div class="timeline-item">
-    <h3>Data Analyst – CIAUMED</h3>
+    <h3>Statistical & Data Analyst – CIAUMED</h3>
     <p class="institution">Casablanca, Morocco</p>
     <p class="date">July 2025 – Present</p>
     <ul>
