--- a/index_en.html
+++ b/index_en.html
@@ -38,10 +38,11 @@
         <section class="section profile">
             <h2><i class="fas fa-user"></i> PROFILE</h2>
            <p>
-        Data Scientist and Analyst specialized in <strong>marketing analytics, revenue management, media insights, and consumer behavior prediction</strong>. 
-        Skilled in <strong>machine learning, deep learning, NLP, and data mining</strong> to deliver actionable insights and ensure data quality. 
-        Experienced with <strong>Python, R, SQL, Power BI, Tableau, and data scraping</strong> for predictive modeling, interactive dashboards, and advanced business intelligence. 
-        Focused on applying <strong>AI and data science</strong> to optimize decision-making and evaluate media and marketing performance.
+       Data Scientist and Analyst passionate about leveraging <strong>Data Science and Artificial Intelligence</strong> 
+        to enhance marketing strategies and support data-driven decision-making. Skilled in 
+        <strong>Python, R, SQL, and Power BI</strong> for exploring data, uncovering insights, and building impactful solutions. 
+        Experienced in transforming complex datasets into clear, actionable intelligence, effectively bridging the gap between 
+        <strong>data and business strategy</strong>.
     </p>
         </section>
 
