--- a/index_en.html
+++ b/index_en.html
@@ -82,7 +82,7 @@
 
 
                <div class="timeline-item">
-    <h3>Data Analyst Intern – CIAUMED </h3>
+    <h3>Data Scientist Intern – CIAUMED </h3>
     <p class="institution">Casablanca, Morocco</p>
     <p class="date">April 2025 – July 2025</p>
     <ul>
